ci: add keys after APK build

--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -73,18 +73,19 @@ jobs:
       id:   date_str
       run:  echo "::set-output name=stdout::$(date -u +%Y-%m-%d-%H%M%S%z)"
 
-    - name: Create working directory
-      run:  mkdir -p /isolated_build/repo/mobile/android/app 
+      # TODOSD: remove both
+    # - name: Create working directory
+    #   run:  mkdir -p /isolated_build/repo/mobile/android/app 
 
-    - name: Setup Release Keystore for Play Store
-      run:  |
-        set -x  # echo commands names
-        mkdir -p $GRADLE_USER_HOME
-        echo "${{ secrets.PLAY_STORE_UPLOAD_KEYSTORE_GRADLEPROP }}" > $GRADLE_USER_HOME/gradle.properties
-        echo "${{ secrets.PLAY_STORE_UPLOAD_KEYSTORE_FILE_B64 }}" > ./cbr-upload-key.keystore.b64
-        base64 -d ./cbr-upload-key.keystore.b64 > ./cbr-upload-key.keystore
-        echo "Date String: ${{ steps.date_str.outputs.stdout }}"
-      working-directory: /isolated_build/repo/mobile/android/app
+    # - name: Setup Release Keystore for Play Store
+    #   run:  |
+    #     set -x  # echo commands names
+    #     mkdir -p $GRADLE_USER_HOME
+    #     echo "${{ secrets.PLAY_STORE_UPLOAD_KEYSTORE_GRADLEPROP }}" > $GRADLE_USER_HOME/gradle.properties
+    #     echo "${{ secrets.PLAY_STORE_UPLOAD_KEYSTORE_FILE_B64 }}" > ./cbr-upload-key.keystore.b64
+    #     base64 -d ./cbr-upload-key.keystore.b64 > ./cbr-upload-key.keystore
+    #     echo "Date String: ${{ steps.date_str.outputs.stdout }}"
+    #   working-directory: /isolated_build/repo/mobile/android/app
 
     - name: Install NPM version & Build Common
       run:  |
@@ -117,7 +118,16 @@ jobs:
         rm -f /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
         npm run build
       working-directory: /isolated_build/repo/mobile
-
+      
+    - name: Setup Release Keystore for Play Store
+      run:  |
+        set -x  # echo commands names
+        mkdir -p $GRADLE_USER_HOME
+        echo "${{ secrets.PLAY_STORE_UPLOAD_KEYSTORE_GRADLEPROP }}" > $GRADLE_USER_HOME/gradle.properties
+        echo "${{ secrets.PLAY_STORE_UPLOAD_KEYSTORE_FILE_B64 }}" > ./cbr-upload-key.keystore.b64
+        base64 -d ./cbr-upload-key.keystore.b64 > ./cbr-upload-key.keystore
+        echo "Date String: ${{ steps.date_str.outputs.stdout }}"
+      working-directory: /isolated_build/repo/mobile/android/app
 
     # NOTE: Artifact upload disabled because builds from the CI/CD server seem
     #       to not work. Specifically, creating a client on mobile and then
