ci: alter prebuild command

--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -116,8 +116,11 @@ jobs:
     - name: Build APK (Targeting Development Server)
       run:  |
         rm -f /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
-        npm run build
+        sudo expo prebuild --clean        
       working-directory: /isolated_build/repo/mobile
+
+    # - name: Test working directory exists
+    #   run: 
       
     - name: Setup Release Keystore for Play Store
       run:  |
