--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -138,7 +138,7 @@ jobs:
     - name: Build APK (Targeting Development Server)
       run:  |
         rm -f /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
-        chmod +x ./android/gradlew
+        chmod +x ./gradlew
         ./gradlew assembleRelease
       working-directory: /isolated_build/repo/mobile/android
 
@@ -206,77 +206,78 @@ jobs:
     #     retention-days: 60
     #     if-no-files-found: error
 
-  build-web:
-    runs-on: [self-hosted, docker]
-    container:
-      image: node:18
-    timeout-minutes: 60
-    steps:
-    - name: Checkout code into container
-      uses: bfraser/cicd/actions/checkout@v1
-      with: 
-        path: /isolated_build/repo/
-    - name: Install NPM
-      run:  npm install -g npm@$NPM_VERSION
-    - name: Build common
-      run:  npm ci
-      working-directory: /isolated_build/repo/common
-    - name: Build web
-      run:  npm ci
-      working-directory: /isolated_build/repo/web
-    - name: Check code formatting
-      run:  npx prettier --check .
-      working-directory: /isolated_build/repo/web
-    - name: Compress files
-      run:  |
-        GENERATE_SOURCEMAP=false npm run build
-        cd build && tar -czvf ../../web_build.tar.gz .
-      working-directory: /isolated_build/repo/web
-    - uses: actions/upload-artifact@v3
-      if: success()
-      with:
-        name: "${{ github.job }}"
-        retention-days: 7
-        path: /isolated_build/repo/web_build.tar.gz
+    # todosd: re-enable
+  # build-web:
+  #   runs-on: [self-hosted, docker]
+  #   container:
+  #     image: node:18
+  #   timeout-minutes: 60
+  #   steps:
+  #   - name: Checkout code into container
+  #     uses: bfraser/cicd/actions/checkout@v1
+  #     with: 
+  #       path: /isolated_build/repo/
+  #   - name: Install NPM
+  #     run:  npm install -g npm@$NPM_VERSION
+  #   - name: Build common
+  #     run:  npm ci
+  #     working-directory: /isolated_build/repo/common
+  #   - name: Build web
+  #     run:  npm ci
+  #     working-directory: /isolated_build/repo/web
+  #   - name: Check code formatting
+  #     run:  npx prettier --check .
+  #     working-directory: /isolated_build/repo/web
+  #   - name: Compress files
+  #     run:  |
+  #       GENERATE_SOURCEMAP=false npm run build
+  #       cd build && tar -czvf ../../web_build.tar.gz .
+  #     working-directory: /isolated_build/repo/web
+  #   - uses: actions/upload-artifact@v3
+  #     if: success()
+  #     with:
+  #       name: "${{ github.job }}"
+  #       retention-days: 7
+  #       path: /isolated_build/repo/web_build.tar.gz
 
-
-  build-server:
-    runs-on: [self-hosted, docker]
-    container:
-      image: python:3.9.1-buster
-    timeout-minutes: 60
-    services:
-      test_postgres:
-        image: postgres:13.1-alpine
-    env:
-      DOMAIN: example.com
-      SECRET_KEY: test
-      POSTGRES_DB: cbr
-      POSTGRES_USER: test
-      POSTGRES_PASSWORD: test
-      POSTGRES_HOST: test_postgres
-    steps:
-    - name: Checkout code into container
-      uses: bfraser/cicd/actions/checkout@v1
-      with: 
-        path: /isolated_build/repo/
-    - name: Install dependencies
-      run:  pip install -r requirements.txt
-      working-directory: /isolated_build/repo/server
-    - name: Check spacing
-      run:  python -m black --check .
-      working-directory: /isolated_build/repo/server
-    - name: Run 'manage.py check'
-      run:  python manage.py check
-      working-directory: /isolated_build/repo/server
-    - name: Make migrations
-      run:  python manage.py makemigrations --check
-      working-directory: /isolated_build/repo/server
-    - name: "TODO: SKIPPING TEST OF 'manage.py test'"
-      run: |
-        echo "::warning file=manage.py,title=SKIPPING TEST::Skipped manage.py test"
-        # python manage.py test
-      working-directory: /isolated_build/repo/server
+    # todosd: re-enable
+  # build-server:
+  #   runs-on: [self-hosted, docker]
+  #   container:
+  #     image: python:3.9.1-buster
+  #   timeout-minutes: 60
+  #   services:
+  #     test_postgres:
+  #       image: postgres:13.1-alpine
+  #   env:
+  #     DOMAIN: example.com
+  #     SECRET_KEY: test
+  #     POSTGRES_DB: cbr
+  #     POSTGRES_USER: test
+  #     POSTGRES_PASSWORD: test
+  #     POSTGRES_HOST: test_postgres
+  #   steps:
+  #   - name: Checkout code into container
+  #     uses: bfraser/cicd/actions/checkout@v1
+  #     with: 
+  #       path: /isolated_build/repo/
+  #   - name: Install dependencies
+  #     run:  pip install -r requirements.txt
+  #     working-directory: /isolated_build/repo/server
+  #   - name: Check spacing
+  #     run:  python -m black --check .
+  #     working-directory: /isolated_build/repo/server
+  #   - name: Run 'manage.py check'
+  #     run:  python manage.py check
+  #     working-directory: /isolated_build/repo/server
+  #   - name: Make migrations
+  #     run:  python manage.py makemigrations --check
+  #     working-directory: /isolated_build/repo/server
+  #   - name: "TODO: SKIPPING TEST OF 'manage.py test'"
+  #     run: |
+  #       echo "::warning file=manage.py,title=SKIPPING TEST::Skipped manage.py test"
+  #       # python manage.py test
+  #     working-directory: /isolated_build/repo/server
 
 
   # ----------------------------------------------------------------------------
