--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -302,50 +302,51 @@ jobs:
           # However, as of July 2023, SFU's GitHub runner is v2.296.x, so using old syntax (which works on newer)
           # https://github.blog/changelog/2022-10-11-github-actions-deprecating-save-state-and-set-output-commands/
           echo "::set-output name=tag::$IMAGE_TAG"
-
-  build-docker-publish-docker-images:
-    needs: [build-common, build-web, build-server, export-image-tag]
-    # needs: [export-image-tag]   # Used for faking and testing
-    runs-on: [self-hosted, docker]
-    timeout-minutes: 60
-    env:
-      IMAGE_TAG: ${{ needs.export-image-tag.outputs.image_tag}}
-    steps:
-    - uses: actions/checkout@v3
-      # Checkout the code, not into a container, because all work here is not in a container
-      with:
-        fetch-depth: 50
-    - name: Get build products
-      uses: actions/download-artifact@v3
-      with:
-        name: build-web
-    # FAKE BUILD: To make build faster for testing, comment out above and use this instead.
-    # - name: Get build products (**FAKE**)
-    #   run: |
-    #     echo "::warning file=web_build.tar.gz,title=FAKE::Fake web_build.tar.gz used for testing!"
-    #     mkdir -p fakestuff/
-    #     touch fakestuff/nothing.txt
-    #     tar -czvf web_build.tar.gz ./fakestuff/
-    - name: Printing debug information...
-      run: |
-        echo "Files in current folder before building image"
-        ls -al
-        echo "IMAGE_TAG = '$IMAGE_TAG'"
-    - name: Running 'docker compose'...
-      run: |
-        docker compose -f docker-compose.yml -f docker-compose.deploy.yml build
-        docker images
-    - name: Pushing to docker hub...
-      run: |
-        docker login -u $HUB_USER -p $HUB_TOKEN
-        docker push $HUB_USER/$HUB_REPO_BACKEND:$IMAGE_TAG
-        docker push $HUB_USER/$HUB_REPO_FRONTEND:$IMAGE_TAG
-        docker logout
-        echo "::notice file=main-cicd.yml::Pushed to Docker Hub with IMAGE_TAG '$IMAGE_TAG'"
-    - name: Cleaning up...
-      run: |
-        docker images -a | grep -e "$HUB_REPO_BACKEND" -e "$HUB_REPO_FRONTEND" | awk '{print $3}' | xargs docker rmi --force
-        docker images
+            
+    #todosd: re-enable
+  # build-docker-publish-docker-images:
+  #   needs: [build-common, build-web, build-server, export-image-tag]
+  #   # needs: [export-image-tag]   # Used for faking and testing
+  #   runs-on: [self-hosted, docker]
+  #   timeout-minutes: 60
+  #   env:
+  #     IMAGE_TAG: ${{ needs.export-image-tag.outputs.image_tag}}
+  #   steps:
+  #   - uses: actions/checkout@v3
+  #     # Checkout the code, not into a container, because all work here is not in a container
+  #     with:
+  #       fetch-depth: 50
+  #   - name: Get build products
+  #     uses: actions/download-artifact@v3
+  #     with:
+  #       name: build-web
+  #   # FAKE BUILD: To make build faster for testing, comment out above and use this instead.
+  #   # - name: Get build products (**FAKE**)
+  #   #   run: |
+  #   #     echo "::warning file=web_build.tar.gz,title=FAKE::Fake web_build.tar.gz used for testing!"
+  #   #     mkdir -p fakestuff/
+  #   #     touch fakestuff/nothing.txt
+  #   #     tar -czvf web_build.tar.gz ./fakestuff/
+  #   - name: Printing debug information...
+  #     run: |
+  #       echo "Files in current folder before building image"
+  #       ls -al
+  #       echo "IMAGE_TAG = '$IMAGE_TAG'"
+  #   - name: Running 'docker compose'...
+  #     run: |
+  #       docker compose -f docker-compose.yml -f docker-compose.deploy.yml build
+  #       docker images
+  #   - name: Pushing to docker hub...
+  #     run: |
+  #       docker login -u $HUB_USER -p $HUB_TOKEN
+  #       docker push $HUB_USER/$HUB_REPO_BACKEND:$IMAGE_TAG
+  #       docker push $HUB_USER/$HUB_REPO_FRONTEND:$IMAGE_TAG
+  #       docker logout
+  #       echo "::notice file=main-cicd.yml::Pushed to Docker Hub with IMAGE_TAG '$IMAGE_TAG'"
+  #   - name: Cleaning up...
+  #     run: |
+  #       docker images -a | grep -e "$HUB_REPO_BACKEND" -e "$HUB_REPO_FRONTEND" | awk '{print $3}' | xargs docker rmi --force
+  #       docker images
 
     
 
@@ -358,19 +359,20 @@ jobs:
 #     https://docs.github.com/en/actions/using-workflows/reusing-workflows
 #   ----------------------------------------------------------------------------
 #   Development (dev) server
-  dev-server-deploy-from-dockerhub:
-    needs: [build-docker-publish-docker-images, export-image-tag]
-    uses: ./.github/workflows/deploy-from-dockerhub.yml
-    with:
-      RUNNER_NAME: deploy-development
-      DOMAIN:      cbr-dev.cmpt.sfu.ca
-      IMAGE_TAG:   ${{ needs.export-image-tag.outputs.image_tag }}
-    secrets: inherit
+    # todosd: re-enable
+  # dev-server-deploy-from-dockerhub:
+  #   needs: [build-docker-publish-docker-images, export-image-tag]
+  #   uses: ./.github/workflows/deploy-from-dockerhub.yml
+  #   with:
+  #     RUNNER_NAME: deploy-development
+  #     DOMAIN:      cbr-dev.cmpt.sfu.ca
+  #     IMAGE_TAG:   ${{ needs.export-image-tag.outputs.image_tag }}
+  #   secrets: inherit
 
-  dev-retag-and-upload-to-dockerhub:
-    needs: [build-docker-publish-docker-images, export-image-tag]
-    uses: ./.github/workflows/retag-and-upload-dockerhub.yml
-    with:
-      IMAGE_TAG:  ${{ needs.export-image-tag.outputs.image_tag }}
-      BRANCH_TAG: dev
-    secrets: inherit
+  # dev-retag-and-upload-to-dockerhub:
+  #   needs: [build-docker-publish-docker-images, export-image-tag]
+  #   uses: ./.github/workflows/retag-and-upload-dockerhub.yml
+  #   with:
+  #     IMAGE_TAG:  ${{ needs.export-image-tag.outputs.image_tag }}
+  #     BRANCH_TAG: dev
+  #   secrets: inherit
