--- a/mobile/app.json
+++ b/mobile/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "CBR",
     "slug": "CBR",
-    "version": "1.0.0",
+    "version": "1.3.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "scheme": "cbr",
@@ -15,9 +15,10 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#ffffff"           
       },
-      "package": "org.hopehealthaction.cbrapp"
+      "package": "org.hopehealthaction.cbrapp",
+      "versionCode": 15     
     },
     "web": {
       "bundler": "metro",
