--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -134,11 +134,10 @@ jobs:
 
     # todosd: test assemble
     # todo: rm -f needed here?
-    # todo: chmod needed?
+    # todo: chmod needed? -> chmod +x ./gradlew
     - name: Build APK (Targeting Development Server)
       run:  |
         rm -f /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
-        chmod +x ./gradlew
         ./gradlew assembleRelease
       working-directory: /isolated_build/repo/mobile/android
 
