--- a/mobile/package.json
+++ b/mobile/package.json
@@ -36,6 +36,7 @@
         "@react-native-community/datetimepicker": "8.0.1",
         "@react-native-community/netinfo": "11.3.1",
         "@react-native-picker/picker": "2.7.5",
+        "@react-navigation/devtools": "^7.0.16",
         "@react-navigation/material-bottom-tabs": "^6.2.29",
         "@react-navigation/native": "^6.0.2",
         "@react-navigation/stack": "^6.2.0",
