--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -73,20 +73,6 @@ jobs:
       id:   date_str
       run:  echo "::set-output name=stdout::$(date -u +%Y-%m-%d-%H%M%S%z)"
 
-      # TODOSD: remove both
-    # - name: Create working directory
-    #   run:  mkdir -p /isolated_build/repo/mobile/android/app 
-
-    # - name: Setup Release Keystore for Play Store
-    #   run:  |
-    #     set -x  # echo commands names
-    #     mkdir -p $GRADLE_USER_HOME
-    #     echo "${{ secrets.PLAY_STORE_UPLOAD_KEYSTORE_GRADLEPROP }}" > $GRADLE_USER_HOME/gradle.properties
-    #     echo "${{ secrets.PLAY_STORE_UPLOAD_KEYSTORE_FILE_B64 }}" > ./cbr-upload-key.keystore.b64
-    #     base64 -d ./cbr-upload-key.keystore.b64 > ./cbr-upload-key.keystore
-    #     echo "Date String: ${{ steps.date_str.outputs.stdout }}"
-    #   working-directory: /isolated_build/repo/mobile/android/app
-
     - name: Install NPM version & Build Common
       run:  |
         set -x  # echo commands names
@@ -104,15 +90,11 @@ jobs:
         npx prettier --check .
       working-directory: /isolated_build/repo/mobile    
 
-    # todosd: remove need for sudo, clean up?
+    # todosd: remove need for sudo?
     - name: Prebuild android folder
       run:  |
         sudo npm run prebuild
       working-directory: /isolated_build/repo/mobile
-
-
-    # - name: Test working directory exists
-    #   run: 
       
     - name: Setup Release Keystore for Play Store
       run:  |
@@ -124,31 +106,18 @@ jobs:
         echo "Date String: ${{ steps.date_str.outputs.stdout }}"
       working-directory: /isolated_build/repo/mobile/android/app
 
-      
-        # TODOSD: remove this, old
-    - name: Build APK (Targeting Development Server)
-      run:  |
-        rm -f /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
-        sudo npm run build dev
-      working-directory: /isolated_build/repo/mobile
-
-    # todosd: test assemble
-    # todo: rm -f needed here?
-    # todo: chmod needed? -> chmod +x ./gradlew
     # - name: Build APK (Targeting Development Server)
     #   run:  |
     #     rm -f /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
-    #     ./gradlew assembleRelease
-    #   working-directory: /isolated_build/repo/mobile/android
+    #     sudo npm run build dev
+    #   working-directory: /isolated_build/repo/mobile
 
-
-    # todosd: this was working, cleaner to use this than the build.js file?
-     # todosd: need chmod +x ./gradlew?
-    # - name: Build AAB
-    #   run:  |
-    #     rm -f /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
-    #     ./gradlew bundleRelease
-    #   working-directory: /isolated_build/repo/mobile/android
+    # todosd: update mobile/.env to target prod
+    - name: Build APK (Targeting Development Server)
+      run:  |
+        rm -f /isolated_build/repo/mobile/android/app/build/outputs/apk/release/app-release.apk
+        ./gradlew assembleRelease
+      working-directory: /isolated_build/repo/mobile/android
 
     # NOTE: Artifact upload disabled because builds from the CI/CD server seem
     #       to not work. Specifically, creating a client on mobile and then
@@ -214,78 +183,76 @@ jobs:
     #     retention-days: 60
     #     if-no-files-found: error
 
-    # todosd: re-enable
-  # build-web:
-  #   runs-on: [self-hosted, docker]
-  #   container:
-  #     image: node:18
-  #   timeout-minutes: 60
-  #   steps:
-  #   - name: Checkout code into container
-  #     uses: bfraser/cicd/actions/checkout@v1
-  #     with: 
-  #       path: /isolated_build/repo/
-  #   - name: Install NPM
-  #     run:  npm install -g npm@$NPM_VERSION
-  #   - name: Build common
-  #     run:  npm ci
-  #     working-directory: /isolated_build/repo/common
-  #   - name: Build web
-  #     run:  npm ci
-  #     working-directory: /isolated_build/repo/web
-  #   - name: Check code formatting
-  #     run:  npx prettier --check .
-  #     working-directory: /isolated_build/repo/web
-  #   - name: Compress files
-  #     run:  |
-  #       GENERATE_SOURCEMAP=false npm run build
-  #       cd build && tar -czvf ../../web_build.tar.gz .
-  #     working-directory: /isolated_build/repo/web
-  #   - uses: actions/upload-artifact@v3
-  #     if: success()
-  #     with:
-  #       name: "${{ github.job }}"
-  #       retention-days: 7
-  #       path: /isolated_build/repo/web_build.tar.gz
+  build-web:
+    runs-on: [self-hosted, docker]
+    container:
+      image: node:18
+    timeout-minutes: 60
+    steps:
+    - name: Checkout code into container
+      uses: bfraser/cicd/actions/checkout@v1
+      with: 
+        path: /isolated_build/repo/
+    - name: Install NPM
+      run:  npm install -g npm@$NPM_VERSION
+    - name: Build common
+      run:  npm ci
+      working-directory: /isolated_build/repo/common
+    - name: Build web
+      run:  npm ci
+      working-directory: /isolated_build/repo/web
+    - name: Check code formatting
+      run:  npx prettier --check .
+      working-directory: /isolated_build/repo/web
+    - name: Compress files
+      run:  |
+        GENERATE_SOURCEMAP=false npm run build
+        cd build && tar -czvf ../../web_build.tar.gz .
+      working-directory: /isolated_build/repo/web
+    - uses: actions/upload-artifact@v3
+      if: success()
+      with:
+        name: "${{ github.job }}"
+        retention-days: 7
+        path: /isolated_build/repo/web_build.tar.gz
 
-    # todosd: re-enable
-  # build-server:
-  #   runs-on: [self-hosted, docker]
-  #   container:
-  #     image: python:3.9.1-buster
-  #   timeout-minutes: 60
-  #   services:
-  #     test_postgres:
-  #       image: postgres:13.1-alpine
-  #   env:
-  #     DOMAIN: example.com
-  #     SECRET_KEY: test
-  #     POSTGRES_DB: cbr
-  #     POSTGRES_USER: test
-  #     POSTGRES_PASSWORD: test
-  #     POSTGRES_HOST: test_postgres
-  #   steps:
-  #   - name: Checkout code into container
-  #     uses: bfraser/cicd/actions/checkout@v1
-  #     with: 
-  #       path: /isolated_build/repo/
-  #   - name: Install dependencies
-  #     run:  pip install -r requirements.txt
-  #     working-directory: /isolated_build/repo/server
-  #   - name: Check spacing
-  #     run:  python -m black --check .
-  #     working-directory: /isolated_build/repo/server
-  #   - name: Run 'manage.py check'
-  #     run:  python manage.py check
-  #     working-directory: /isolated_build/repo/server
-  #   - name: Make migrations
-  #     run:  python manage.py makemigrations --check
-  #     working-directory: /isolated_build/repo/server
-  #   - name: "TODO: SKIPPING TEST OF 'manage.py test'"
-  #     run: |
-  #       echo "::warning file=manage.py,title=SKIPPING TEST::Skipped manage.py test"
-  #       # python manage.py test
-  #     working-directory: /isolated_build/repo/server
+  build-server:
+    runs-on: [self-hosted, docker]
+    container:
+      image: python:3.9.1-buster
+    timeout-minutes: 60
+    services:
+      test_postgres:
+        image: postgres:13.1-alpine
+    env:
+      DOMAIN: example.com
+      SECRET_KEY: test
+      POSTGRES_DB: cbr
+      POSTGRES_USER: test
+      POSTGRES_PASSWORD: test
+      POSTGRES_HOST: test_postgres
+    steps:
+    - name: Checkout code into container
+      uses: bfraser/cicd/actions/checkout@v1
+      with: 
+        path: /isolated_build/repo/
+    - name: Install dependencies
+      run:  pip install -r requirements.txt
+      working-directory: /isolated_build/repo/server
+    - name: Check spacing
+      run:  python -m black --check .
+      working-directory: /isolated_build/repo/server
+    - name: Run 'manage.py check'
+      run:  python manage.py check
+      working-directory: /isolated_build/repo/server
+    - name: Make migrations
+      run:  python manage.py makemigrations --check
+      working-directory: /isolated_build/repo/server
+    - name: "TODO: SKIPPING TEST OF 'manage.py test'"
+      run: |
+        echo "::warning file=manage.py,title=SKIPPING TEST::Skipped manage.py test"
+        # python manage.py test
+      working-directory: /isolated_build/repo/server
 
 
   # ----------------------------------------------------------------------------
@@ -311,50 +278,49 @@ jobs:
           # https://github.blog/changelog/2022-10-11-github-actions-deprecating-save-state-and-set-output-commands/
           echo "::set-output name=tag::$IMAGE_TAG"
             
-    #todosd: re-enable
-  # build-docker-publish-docker-images:
-  #   needs: [build-common, build-web, build-server, export-image-tag]
-  #   # needs: [export-image-tag]   # Used for faking and testing
-  #   runs-on: [self-hosted, docker]
-  #   timeout-minutes: 60
-  #   env:
-  #     IMAGE_TAG: ${{ needs.export-image-tag.outputs.image_tag}}
-  #   steps:
-  #   - uses: actions/checkout@v3
-  #     # Checkout the code, not into a container, because all work here is not in a container
-  #     with:
-  #       fetch-depth: 50
-  #   - name: Get build products
-  #     uses: actions/download-artifact@v3
-  #     with:
-  #       name: build-web
-  #   # FAKE BUILD: To make build faster for testing, comment out above and use this instead.
-  #   # - name: Get build products (**FAKE**)
-  #   #   run: |
-  #   #     echo "::warning file=web_build.tar.gz,title=FAKE::Fake web_build.tar.gz used for testing!"
-  #   #     mkdir -p fakestuff/
-  #   #     touch fakestuff/nothing.txt
-  #   #     tar -czvf web_build.tar.gz ./fakestuff/
-  #   - name: Printing debug information...
-  #     run: |
-  #       echo "Files in current folder before building image"
-  #       ls -al
-  #       echo "IMAGE_TAG = '$IMAGE_TAG'"
-  #   - name: Running 'docker compose'...
-  #     run: |
-  #       docker compose -f docker-compose.yml -f docker-compose.deploy.yml build
-  #       docker images
-  #   - name: Pushing to docker hub...
-  #     run: |
-  #       docker login -u $HUB_USER -p $HUB_TOKEN
-  #       docker push $HUB_USER/$HUB_REPO_BACKEND:$IMAGE_TAG
-  #       docker push $HUB_USER/$HUB_REPO_FRONTEND:$IMAGE_TAG
-  #       docker logout
-  #       echo "::notice file=main-cicd.yml::Pushed to Docker Hub with IMAGE_TAG '$IMAGE_TAG'"
-  #   - name: Cleaning up...
-  #     run: |
-  #       docker images -a | grep -e "$HUB_REPO_BACKEND" -e "$HUB_REPO_FRONTEND" | awk '{print $3}' | xargs docker rmi --force
-  #       docker images
+  build-docker-publish-docker-images:
+    needs: [build-common, build-web, build-server, export-image-tag]
+    # needs: [export-image-tag]   # Used for faking and testing
+    runs-on: [self-hosted, docker]
+    timeout-minutes: 60
+    env:
+      IMAGE_TAG: ${{ needs.export-image-tag.outputs.image_tag}}
+    steps:
+    - uses: actions/checkout@v3
+      # Checkout the code, not into a container, because all work here is not in a container
+      with:
+        fetch-depth: 50
+    - name: Get build products
+      uses: actions/download-artifact@v3
+      with:
+        name: build-web
+    # FAKE BUILD: To make build faster for testing, comment out above and use this instead.
+    # - name: Get build products (**FAKE**)
+    #   run: |
+    #     echo "::warning file=web_build.tar.gz,title=FAKE::Fake web_build.tar.gz used for testing!"
+    #     mkdir -p fakestuff/
+    #     touch fakestuff/nothing.txt
+    #     tar -czvf web_build.tar.gz ./fakestuff/
+    - name: Printing debug information...
+      run: |
+        echo "Files in current folder before building image"
+        ls -al
+        echo "IMAGE_TAG = '$IMAGE_TAG'"
+    - name: Running 'docker compose'...
+      run: |
+        docker compose -f docker-compose.yml -f docker-compose.deploy.yml build
+        docker images
+    - name: Pushing to docker hub...
+      run: |
+        docker login -u $HUB_USER -p $HUB_TOKEN
+        docker push $HUB_USER/$HUB_REPO_BACKEND:$IMAGE_TAG
+        docker push $HUB_USER/$HUB_REPO_FRONTEND:$IMAGE_TAG
+        docker logout
+        echo "::notice file=main-cicd.yml::Pushed to Docker Hub with IMAGE_TAG '$IMAGE_TAG'"
+    - name: Cleaning up...
+      run: |
+        docker images -a | grep -e "$HUB_REPO_BACKEND" -e "$HUB_REPO_FRONTEND" | awk '{print $3}' | xargs docker rmi --force
+        docker images
 
     
 
@@ -367,20 +333,19 @@ jobs:
 #     https://docs.github.com/en/actions/using-workflows/reusing-workflows
 #   ----------------------------------------------------------------------------
 #   Development (dev) server
-    # todosd: re-enable
-  # dev-server-deploy-from-dockerhub:
-  #   needs: [build-docker-publish-docker-images, export-image-tag]
-  #   uses: ./.github/workflows/deploy-from-dockerhub.yml
-  #   with:
-  #     RUNNER_NAME: deploy-development
-  #     DOMAIN:      cbr-dev.cmpt.sfu.ca
-  #     IMAGE_TAG:   ${{ needs.export-image-tag.outputs.image_tag }}
-  #   secrets: inherit
+  dev-server-deploy-from-dockerhub:
+    needs: [build-docker-publish-docker-images, export-image-tag]
+    uses: ./.github/workflows/deploy-from-dockerhub.yml
+    with:
+      RUNNER_NAME: deploy-development
+      DOMAIN:      cbr-dev.cmpt.sfu.ca
+      IMAGE_TAG:   ${{ needs.export-image-tag.outputs.image_tag }}
+    secrets: inherit
 
-  # dev-retag-and-upload-to-dockerhub:
-  #   needs: [build-docker-publish-docker-images, export-image-tag]
-  #   uses: ./.github/workflows/retag-and-upload-dockerhub.yml
-  #   with:
-  #     IMAGE_TAG:  ${{ needs.export-image-tag.outputs.image_tag }}
-  #     BRANCH_TAG: dev
-  #   secrets: inherit
+  dev-retag-and-upload-to-dockerhub:
+    needs: [build-docker-publish-docker-images, export-image-tag]
+    uses: ./.github/workflows/retag-and-upload-dockerhub.yml
+    with:
+      IMAGE_TAG:  ${{ needs.export-image-tag.outputs.image_tag }}
+      BRANCH_TAG: dev
+    secrets: inherit
