--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
         "@mui/lab": "^5.0.0-alpha.170",
         "@mui/material": "^5.16.7",
         "@mui/x-data-grid": "^5.17.26",
+        "@mui/x-date-pickers": "^7.28.3",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.3",
         "@testing-library/user-event": "^12.6.0",
@@ -30,6 +31,7 @@
         "formik-mui": "^4.0.0",
         "i18next": "^23.16.0",
         "jwt-decode": "^3.1.2",
+        "moment": "^2.30.1",
         "react": "^18.3.1",
         "react-cropper": "^2.1.7",
         "react-csv": "^2.0.3",
