--- a/mobile/package.json
+++ b/mobile/package.json
@@ -6,8 +6,8 @@
         "start": "expo run:android",
         "start-with-target": "expo run:android --port 8088 --device",
         "prebuild": "expo prebuild --clean --platform android",
-        "build": "node build.js",
-        "bundle": "node build.js --bundle",
+        "build-apk": "node build.js",
+        "build-aab": "node build.js --bundle",
         "reset-project": "node ./scripts/reset-project.js",
         "refresh-common": "npm uninstall @cbr/common && npm pack ../common && npm install cbr-common-1.0.0.tgz",
         "test": "jest --watchAll",
