--- a/mobile/package.json
+++ b/mobile/package.json
@@ -43,6 +43,7 @@
         "async-mutex": "0.5.0",
         "events": "^3.3.0",
         "expo": "~51.0.28",
+        "expo-application": "^6.0.2",
         "expo-background-fetch": "~12.0.1",
         "expo-build-properties": "~0.12.5",
         "expo-constants": "~16.0.2",
