--- a/web/package.json
+++ b/web/package.json
@@ -26,12 +26,12 @@
         "bootstrap": "^4.5.3",
         "browser-image-compression": "^1.0.17",
         "craco-babel-loader": "^0.1.4",
+        "dayjs": "^1.11.13",
         "expo-localization": "^10.2.0",
         "formik": "^2.2.6",
         "formik-mui": "^4.0.0",
         "i18next": "^23.16.0",
         "jwt-decode": "^3.1.2",
-        "moment": "^2.30.1",
         "react": "^18.3.1",
         "react-cropper": "^2.1.7",
         "react-csv": "^2.0.3",
