639 remove install python step and run job in python container

--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -241,6 +241,8 @@ jobs:
     # This job needs the server to be built first
     needs: [build-server]
     runs-on: [self-hosted, docker]
+    container:
+      image: python:3.9.1-buster
     timeout-minutes: 60
     services:
       test_postgres:
@@ -256,10 +258,6 @@ jobs:
         uses: bfraser/cicd/actions/checkout@v1
         with:
           path: /isolated_build/repo/
-      - name: Setup Python 3.9
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
       - name: Install dependencies
         run: pip install -r requirements.txt
         working-directory: /isolated_build/repo/server
