639 add domain env so settings file has it in the pipeline

--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -253,6 +253,7 @@ jobs:
       POSTGRES_PASSWORD: test
       POSTGRES_HOST: test_postgres
       SECRET_KEY: test
+      DOMAIN: example.com
     steps:
       - name: Checkout server code into container
         uses: bfraser/cicd/actions/checkout@v1
