--- a/mobile/package.json
+++ b/mobile/package.json
@@ -39,6 +39,8 @@
         "@react-navigation/material-bottom-tabs": "^6.2.29",
         "@react-navigation/native": "^6.0.2",
         "@react-navigation/stack": "^6.2.0",
+        "@rneui/base": "^4.0.0-rc.7",
+        "@rneui/themed": "^4.0.0-rc.8",
         "@types/react-native-vector-icons": "^6.4.6",
         "async-mutex": "0.5.0",
         "events": "^3.3.0",
@@ -69,7 +71,7 @@
         "react-native": "0.74.5",
         "react-native-background-timer": "^2.4.1",
         "react-native-dotenv": "^3.2.0",
-        "react-native-elements": "^3.4.2",
+        "react-native-elements": "^3.4.3",
         "react-native-gesture-handler": "~2.16.1",
         "react-native-keyboard-aware-scroll-view": "^0.9.4",
         "react-native-multiple-select": "^0.5.6",
@@ -80,7 +82,6 @@
         "react-native-safe-area-context": "4.10.5",
         "react-native-screens": "3.31.1",
         "react-native-svg": "15.2.0",
-        "react-native-vector-icons": "^8.1.0",
         "react-native-web": "~0.19.10",
         "react-redux": "^7.2.6",
         "react-router-dom": "^5.2.0",
