attempt expo 52 upgrade and update versioning numbers

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,41 +1,46 @@
 {
-  "expo": {
-    "name": "CBR",
-    "slug": "CBR",
-    "version": "1.3.2",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "scheme": "cbr",
-    "userInterfaceStyle": "automatic",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"           
-      },
-      "package": "org.hopehealthaction.cbrapp",
-      "versionCode": 17     
-    },
-    "web": {
-      "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/favicon.png"
-    },
-    "plugins": [
-      "expo-router",
-      "expo-build-properties",
-      "expo-localization",
-      "./plugins/withAndroidSigningConfig.ts"
-    ],
-    "experiments": {
-      "typedRoutes": true
-    },
-    "ios": {
-      "bundleIdentifier": "org.hopehealthaction.cbrapp"
+    "expo": {
+        "name": "CBR",
+        "slug": "CBR",
+        "version": "1.4.0",
+        "orientation": "portrait",
+        "icon": "./assets/icon.png",
+        "scheme": "cbr",
+        "userInterfaceStyle": "automatic",
+        "splash": {
+            "image": "./assets/splash.png",
+            "resizeMode": "contain",
+            "backgroundColor": "#ffffff"
+        },
+        "android": {
+            "adaptiveIcon": {
+                "foregroundImage": "./assets/adaptive-icon.png",
+                "backgroundColor": "#ffffff"
+            },
+            "package": "org.hopehealthaction.cbrapp",
+            "versionCode": 18
+        },
+        "web": {
+            "bundler": "metro",
+            "output": "static",
+            "favicon": "./assets/favicon.png"
+        },
+        "plugins": [
+            "expo-router",
+            "expo-build-properties",
+            {
+                "android": {
+                    "targetSdkVersion": 35
+                }
+            },
+            "expo-localization",
+            "./plugins/withAndroidSigningConfig.ts"
+        ],
+        "experiments": {
+            "typedRoutes": true
+        },
+        "ios": {
+            "bundleIdentifier": "org.hopehealthaction.cbrapp"
+        }
     }
-  }
 }
