--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,6 +1,6 @@
 {
     "engines": {
-        "node": ">=18.20.4 <19"
+        "node": ">=20 <21"
     },
     "scripts": {
         "start": "expo run:android",
@@ -18,6 +18,37 @@
     "jest": {
         "preset": "jest-expo"
     },
+    "expo": {
+        "doctor": {
+            "reactNativeDirectoryCheck": {
+                "exclude": [
+                    "@nozbe/watermelondb",
+                    "react-native-background-timer",
+                    "react-native-keyboard-aware-scroll-view",
+                    "react-native-multiple-select",
+                    "@babel/runtime",
+                    "@cbr/common",
+                    "@formatjs/intl-datetimeformat",
+                    "@formatjs/intl-displaynames",
+                    "@formatjs/intl-getcanonicallocales",
+                    "@formatjs/intl-listformat",
+                    "@formatjs/intl-locale",
+                    "@formatjs/intl-numberformat",
+                    "@formatjs/intl-pluralrules",
+                    "@formatjs/intl-relativetimeformat",
+                    "async-mutex",
+                    "events",
+                    "in",
+                    "react-native-elements",
+                    "react-native-multiple-select-list",
+                    "react-native-progress-steps",
+                    "react-router-dom",
+                    "socket.io-client"
+                ],
+                "listUnknownPackages": false
+            }
+        }
+    },
     "dependencies": {
         "@babel/runtime": "^7.25.7",
         "@cbr/common": "file:cbr-common-1.0.0.tgz",
@@ -32,60 +63,57 @@
         "@formatjs/intl-relativetimeformat": "^9.1.7",
         "@gorhom/bottom-sheet": "^4.1.3",
         "@nozbe/watermelondb": "^0.27.1",
-        "@react-native-async-storage/async-storage": "1.23.1",
-        "@react-native-community/datetimepicker": "8.0.1",
-        "@react-native-community/netinfo": "11.3.1",
-        "@react-native-picker/picker": "2.7.5",
-        "@react-navigation/material-bottom-tabs": "^6.2.29",
-        "@react-navigation/native": "^6.0.2",
-        "@react-navigation/stack": "^6.2.0",
-        "@rneui/base": "^4.0.0-rc.7",
-        "@rneui/themed": "^4.0.0-rc.8",
+        "@react-native-async-storage/async-storage": "2.1.2",
+        "@react-native-community/datetimepicker": "8.4.1",
+        "@react-native-community/netinfo": "11.4.1",
+        "@react-native-picker/picker": "2.11.1",
+        "@react-navigation/bottom-tabs": "^7.3.10",
+        "@react-navigation/native": "^7.1.6",
+        "@react-navigation/native-stack": "^7.3.10",
+        "@reduxjs/toolkit": "^2.9.2",
         "@types/react-native-vector-icons": "^6.4.6",
         "async-mutex": "0.5.0",
         "events": "^3.3.0",
-        "expo": "~51.0.28",
+        "expo": "^53",
         "expo-application": "^6.0.2",
-        "expo-background-fetch": "~12.0.1",
-        "expo-build-properties": "~0.12.5",
-        "expo-constants": "~16.0.2",
-        "expo-font": "~12.0.9",
-        "expo-image-manipulator": "~12.0.5",
-        "expo-image-picker": "~15.1.0",
-        "expo-linking": "~6.3.1",
-        "expo-localization": "~15.0.3",
-        "expo-router": "~3.5.23",
-        "expo-splash-screen": "~0.27.5",
-        "expo-status-bar": "~1.12.1",
-        "expo-system-ui": "~3.0.7",
-        "expo-task-manager": "~11.8.2",
-        "expo-updates": "~0.25.28",
-        "expo-web-browser": "~13.0.3",
+        "expo-background-fetch": "~13.1.6",
+        "expo-build-properties": "~0.14.8",
+        "expo-constants": "~17.1.7",
+        "expo-font": "~13.3.2",
+        "expo-image-manipulator": "~13.1.7",
+        "expo-image-picker": "~16.1.4",
+        "expo-linking": "~7.1.7",
+        "expo-localization": "~16.1.6",
+        "expo-router": "~5.1.7",
+        "expo-splash-screen": "~0.30.10",
+        "expo-status-bar": "~2.2.3",
+        "expo-system-ui": "~5.0.11",
+        "expo-task-manager": "~13.1.6",
+        "expo-updates": "~0.28.17",
+        "expo-web-browser": "~14.2.0",
         "formik": "^2.2.9",
         "i18next": "^23.16.2",
         "in": "^0.19.0",
-        "mobile": "^0.0.1",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
+        "react": "19.0.0",
+        "react-dom": "19.0.0",
         "react-i18next": "^15.0.0",
-        "react-native": "0.74.5",
+        "react-native": "0.79.6",
         "react-native-background-timer": "^2.4.1",
         "react-native-dotenv": "^3.2.0",
         "react-native-elements": "^3.4.3",
-        "react-native-gesture-handler": "~2.16.1",
+        "react-native-gesture-handler": "~2.24.0",
         "react-native-keyboard-aware-scroll-view": "^0.9.4",
         "react-native-multiple-select": "^0.5.6",
         "react-native-multiple-select-list": "^1.0.4",
         "react-native-paper": "^5.12.4",
         "react-native-progress-steps": "^2.0.3",
-        "react-native-reanimated": "~3.10.1",
-        "react-native-safe-area-context": "4.10.5",
-        "react-native-screens": "3.31.1",
-        "react-native-svg": "15.2.0",
-        "react-native-web": "~0.19.10",
-        "react-redux": "^7.2.6",
+        "react-native-reanimated": "~3.17.4",
+        "react-native-safe-area-context": "5.4.0",
+        "react-native-screens": "~4.11.1",
+        "react-native-svg": "15.11.2",
+        "react-native-web": "^0.20.0",
+        "react-redux": "^9.2.0",
         "react-router-dom": "^5.2.0",
-        "redux": "^4.1.2",
         "socket.io-client": "^4.3.2",
         "victory-native": "^36.3.1",
         "yup": "^0.32.9"
@@ -95,19 +123,22 @@
         "@babel/plugin-proposal-decorators": "^7.25.9",
         "@types/jest": "^29.5.12",
         "@types/node": "^15.12.2",
-        "@types/react": "^18.3.3",
+        "@types/react": "~19.0.10",
         "@types/react-native-material-dropdown": "^0.11.4",
         "@types/react-router-dom": "^5.1.7",
         "@types/react-test-renderer": "^18.0.7",
         "better-sqlite3": "^11.5.0",
         "jest": "^29.2.1",
-        "jest-expo": "~51.0.3",
+        "jest-expo": "~53.0.10",
         "prettier": "2.3.0",
         "react-native-vector-icons": "^8.1.0",
-        "react-test-renderer": "18.2.0",
-        "typescript": "^5.6.2"
+        "react-test-renderer": "19.0.0",
+        "typescript": "~5.8.3"
     },
     "private": true,
-    "name": "mobile",
-    "version": "1.0.0"
+    "name": "hha-cbr-mobile",
+    "version": "1.0.0",
+    "overrides": {
+        "react-native-screens": "~4.11.1"
+    }
 }
